--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,15 @@
     <!-- Web App Tags: For add to home screen -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <!-- Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#212121">
+
+    <!-- iOS  -->
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="MTR Service Status">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-touch-fullscreen" content="yes">
 
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/static/media/touch-icons/apple-touch-icon-180x180.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/static/media/touch-icons/apple-touch-icon-152x152.png" />
